src/test/resources/model_test/valid/TwoEntities_model/Employee.entity
Employee {

    // ATTRIBUTES
	id : int {@Id}; // the id
	firstName : string ;
	birthDate : date ;

    // LINKS
	country : Country {@Max(3)}; // Pseudo FK => field definition replaced by PK Country.id 
}
