src/test/resources/model_test/invalid/TwoEntities_model/Employee.entity
Employee 

	id : int {@Id}; // the id
	firstName : string ;
	birthDate : date ;
	country : Country {@Max(3)}; // Pseudo FK => field definition replaced by PK Country.id 
}
